# kube-authkit

./: .gitignore  Dockerfile.test  LICENSE  README.md  TESTING.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: test.yml
src/openshift_ai_auth/: __init__.py  config.py  exceptions.py  factory.py
src/openshift_ai_auth/strategies/: __init__.py  base.py  incluster.py  kubeconfig.py  oidc.py  openshift.py
tests/: __init__.py  conftest.py  mock_oauth_server.py  test_config.py  test_factory.py
tests/integration/: test_factory_integration.py  test_incluster_integration.py  test_kubeconfig_integration.py  test_oidc_integration.py  test_openshift_integration.py
tests/strategies/: __init__.py  test_base.py  test_incluster.py  test_kubeconfig.py  test_oidc.py  test_openshift.py
