[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openshift-ai-auth"
version = "0.1.0"
description = "Thin authentication layer for OpenShift AI - unified KubeConfig, In-Cluster, OIDC, and OpenShift OAuth authentication"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "OpenShift AI Team"}
]
keywords = ["openshift", "kubernetes", "authentication", "oidc", "oauth", "k8s"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]

dependencies = [
    "kubernetes>=28.0.0",
    "requests>=2.31.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.5",
]

[project.urls]
Homepage = "https://github.com/openshift/openshift-ai-auth"
Documentation = "https://github.com/openshift/openshift-ai-auth#readme"
Repository = "https://github.com/openshift/openshift-ai-auth"
Issues = "https://github.com/openshift/openshift-ai-auth/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openshift_ai_auth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=openshift_ai_auth",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
    "--strict-markers",
    "-ra",  # Show summary of all test outcomes
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that use mock servers",
    "e2e: End-to-end tests that require real external services",
    "slow: Tests that take longer to run",
]
# Filter warnings
filterwarnings = [
    "error",  # Treat warnings as errors
    "ignore::DeprecationWarning",  # Ignore deprecation warnings
    "ignore::pytest.PytestUnraisableExceptionWarning",  # Ignore unraisable exceptions
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"] # assert_used (needed in tests)
